added new color styles and background image

--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
     <div id="about">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 center">
                     <h2 class="heading">About Me</h2>
+                    <img class="headshot" id="head-pic"src="/images/headshot.jpg" alt="headshot">
                 </div>
                 <div class="col-md-8">
                     <p>
@@ -202,7 +203,9 @@
             <li>Flask</li>
             <li>Tornado</li>
             <li>AWS</li>
+            <li>AJAX</li>
             <li>Dokku</li>
+            <li>Git</li>
         </ul>
     </div>
     <!-- End #skills -->
