--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1> Josh Westbury</h1>
             <h2>Software Engineer</h2>
-            <a href="/docs/jrw-resume.pdf" download="resume.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="/docs/resume-jrw.pdf" download="resume.pdf" class="btn-rounded-white">Download Resume</a>
             <!-- <a href="#" class="btn-rounded-white">Download Resume</a> -->
         </div>
         <!-- End #lead-content -->
