--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div>
+                        <div id="learning">
                             <h2 class="heading">What I'm learning</h2>
                                 <ul>
                                     <li>Vue.js</li>
