--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
     <div id="lead">
         <div id="lead-content">
             <h1> Josh Westbury</h1>
-            <h2>Software Engineer</h2>
+            <!-- <div class="element"></div> -->
+            <h2 class="element"></h2>
+
+
             <a href="/docs/resume-jrw.pdf" download="resume.pdf" class="btn-rounded-white">Download Resume</a>
             <!-- <a href="#" class="btn-rounded-white">Download Resume</a> -->
         </div>
@@ -340,8 +343,11 @@
     </footer>
     <!-- End footer -->
 
+
+    <script src="/node_modules/typed.js/lib/typed.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/scripts.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
