changed styles and added about me wording

--- a/index.html
+++ b/index.html
@@ -77,10 +77,14 @@
                     <img class="headshot" id="head-pic"src="/images/headshot.jpg" alt="headshot">
                 </div>
                 <div class="col-md-8">
+                    <p id="hi"><br>
+                        <strong>Hi I'm Josh</strong>. I'm a former academic turned software engineer.
+                    </p><br>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        For the past six years I collaborated with devlopers, designers, and data scientists as a scholar-in-residence at a software company that specializes in academic software. While I love the rigor of research and the critical thinking of academic work, I was ready for a new challenge.  So, I exchanged the ivory tower for zeros and ones, and haven't looked back. I'm passionate about providing eloquent solutions to complex problems, and writing software that improves the way we live and experience the world.
+                    </p><br>
+                    <p>
+                        I'm proficient in Python, JavaScript, CSS3, and HTML5, among others. I love drinking coffee and learning new things, and I believe that collaboration is critical for quality software.
                     </p>
                 </div>
             </div>
@@ -89,39 +93,38 @@
     <!-- End #about -->
 
     <div id="skills">
-        <h2 class="heading">Skills</h2>
+        <!-- <h2 class="heading">Skills</h2> -->
         <div class="container">
             <div class="row">
                     <div class="col-md-6">
                         <div>
-                            <h2 class="heading">What I know</h2>
+                            <h2 class="heading">Front End</h2>
                                 <ul>
-                                    <li>HTML</li>
-                                    <li>CSS</li>
+                                    <li>HTML5</li>
+                                    <li>CSS3</li>
                                     <li>JavaScript</li>
-                                    <li>Node.js</li>
-                                    <li>SQL</li>
-                                    <li>PostgreSQL</li>
-                                    <li>Express</li>
+                                    <li>React</li>
+                                    <li>Less</li>
+                                    <li>Sass</li>
                                     <li>jQuery</li>
-                                    <li>Python</li>
-                                    <li>Flask</li>
-                                    <li>Tornado</li>
-                                    <li>AWS</li>
-                                    <li>AJAX</li>
-                                    <li>Dokku</li>
-                                    <li>Git</li>
                                 </ul>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div id="learning">
-                            <h2 class="heading">What I'm learning</h2>
+                            <h2 class="heading">Back End</h2>
                                 <ul>
-                                    <li>Vue.js</li>
-                                    <li>MongoDB</li>
-                                    <li>Django</li>
-                                    <li>Angular2</li>
+                                    <li>Node.js</li>
+                                    <li>Python</li>
+                                    <li>SQL</li>
+                                    <li>PostgreSQL</li>
+                                    <li>Express</li>
+                                    <li>Flask</li>
+                                    <li>Tornado</li>
+                                    <li>WebSocket</li>
+                                    <li>AWS</li>
+                                    <li>Dokku</li>
+                                    <li>Heroku</li>
                                 </ul>
                         </div>
                     </div>
@@ -178,7 +181,7 @@
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/joshwestbury/LitOcean">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -218,7 +221,6 @@
             <span class="education-date">Sept 2017 - Jan 2018</span>
             <h4>Full Stack Immersive Bootcamp</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
             </p>
         </div>
         <!-- End .education-block -->
@@ -227,17 +229,7 @@
             <h3>University of Stellenbosch, South Africa</h3>
             <span class="education-date">May 2011 - Dec 2014</span>
             <h4>PhD Linguistics and Ancient Languages</h4>
-            <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-            </ul>
+
         </div>
         <!-- End .education-block -->
 
@@ -245,17 +237,6 @@
             <h3>University of Stellenbosch, South Africa</h3>
             <span class="education-date">Jan 2009 - Mar 2010</span>
             <h4>MA Linguistics and Ancient Languages</h4>
-            <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-            </ul>
         </div>
         <!-- End .education-block -->
 
@@ -263,17 +244,6 @@
             <h3>Houston Baptist University</h3>
             <span class="education-date">Sept 2002 - Dec 2005</span>
             <h4>BA Ancient Language and Theology</h4>
-            <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-            </ul>
         </div>
         <!-- End .education-block -->
     </div>
