added copy and changed padding in projects

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h2 class="element"></h2>
 
 
-            <a href="/docs/resume-jrw.pdf" download="resume.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="/docs/jrw-resume.pdf" download="jrw-resume.pdf" class="btn-rounded-white">Download Resume</a>
             <!-- <a href="#" class="btn-rounded-white">Download Resume</a> -->
         </div>
         <!-- End #lead-content -->
@@ -81,10 +81,10 @@
                         <strong>Hi I'm Josh</strong>. I'm a former academic turned software engineer.
                     </p><br>
                     <p>
-                        For the past six years I collaborated with devlopers, designers, and data scientists as a scholar-in-residence at a software company that specializes in academic software. While I love the rigor of research and the critical thinking of academic work, I was ready for a new challenge.  So, I exchanged the ivory tower for zeros and ones, and haven't looked back. I'm passionate about providing eloquent solutions to complex problems, and writing software that improves the way we live and experience the world.
+                        For the past six years I collaborated with developers, designers, and data scientists as a scholar-in-residence at a software company that specializes in academic software. Although I love the rigor of research and the critical thinking of academic work, I was ready for a new challenge.  So, I exchanged the ivory tower for zeros and ones, and I haven't looked back. I'm passionate about providing eloquent solutions to complex problems, and writing software that improves the way we live and experience the world.
                     </p><br>
                     <p>
-                        I'm proficient in Python, JavaScript, CSS3, and HTML5, among others. I love drinking coffee and learning new things, and I believe that collaboration is critical for quality software.
+                        I'm proficient in Python, JavaScript, CSS3, and HTML5, among others. I love drinking coffee and learning new things. I believe that collaboration is critical for quality software.
                     </p>
                 </div>
             </div>
@@ -144,12 +144,17 @@
                         <img src="images/safetravels.png" />
                     </div>
                     <!-- End .project-image -->
-                    <div class="project-info">
+                    <div class="project-info" id="safe">
                         <h3>Safe Travels</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            A map application that visualizes recent Houston crime data in conjunction with bus routes and bike paths to help ensure you get to where you're going safly.
                         </p>
-                        <a href="https://safetravels.joshwestbury.com/">View Project</a>
+                        <p>
+                            Built with Flask, Python, JavaScript, jQuery, PostgreSQL, PostGiS, SQLAlchemy, and Google Maps API
+                        </p>
+                        <a href="https://chatter.joshwestbury.com/">View Live Site</a>
+                        <span class="space"> | </span>
+                        <a href="https://chatter.joshwestbury.com/">View on Github</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -160,12 +165,17 @@
                         <img src="images/chatter.png" />
                     </div>
                     <!-- End .project-image -->
-                    <div class="project-info">
+                    <div class="project-info" id="chat">
                         <h3>Chatter</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            A chat application that allows users to message one another in real time
                         </p>
-                        <a href="https://chatter.joshwestbury.com/">View Project</a>
+                        <p>
+                            Built with Express, Node.js, JavaScript, and WebSocket
+                        </p>
+                        <a href="https://chatter.joshwestbury.com/">View Live Site</a>
+                        <span class="space"> | </span>
+                        <a href="https://chatter.joshwestbury.com/">View on Github</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -176,12 +186,15 @@
                         <img src="images/LitOcean.png" />
                     </div>
                     <!-- End .project-image -->
-                    <div class="project-info">
+                    <div class="project-info" id="lit">
                         <h3>Lit Ocean</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            A personal library application that allows users to store and retrieve book information
                         </p>
-                        <a href="https://github.com/joshwestbury/LitOcean">View Project</a>
+                        <p>
+                            Built with Express, Node.js, JavaScript, PostgreSQL, MongoDB, and OAuth2.0
+                        </p>
+                        <a href="https://chatter.joshwestbury.com/">View on Github</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -199,7 +212,10 @@
                 <h3>DigitalCrafts</h3>
                 <h4></h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    A four month, full time immersive coding bootcamp
+                </p><br>
+                <p>
+                    Over the course of this bootcamp, I've built several projects with a wide range of technologies, and learned how to collaborate with others using version control.
                 </p>
             </div>
 
@@ -207,7 +223,15 @@
                 <h3>Logos Research Systems | Faithlife Corporation</h3>
                 <h4>Scholar-in-Residence</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Pioneered a variety of digital research resources, taking projects from concept to market
+                <p><br>
+                    Led a team of data analysts, developers, and editors, overseeing production, solving conceptual and practical problems, and guaranteeing each project was completed according to specifications
+                </p><br>
+                <p>
+                    Meticulously tracked workflow to ensure projects were completed on time and on budget, securing return on investment
+                </p><br>
+                <p>
+                    Worked cross-departmentally with developers, marketing, sales, publications, and design to optimize product awareness and increase sales by writing blogs posts, web copy, and scripting screencasts and product videos
                 </p>
             </div>
         </div>
