added links to projects

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info" id="safe">
-                        <h3>Safe Travels</h3>
+                        <h3>SafeTravels</h3>
                         <p>
                             A map application that visualizes recent Houston crime data in conjunction with bus routes and bike paths to help ensure you get to where you're going safly.
                         </p>
@@ -154,7 +154,7 @@
                         </p>
                         <a href="https://chatter.joshwestbury.com/">View Live Site</a>
                         <span class="space"> | </span>
-                        <a href="https://chatter.joshwestbury.com/">View on Github</a>
+                        <a href="https://github.com/joshwestbury/SafeTravels">View on Github</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -175,7 +175,7 @@
                         </p>
                         <a href="https://chatter.joshwestbury.com/">View Live Site</a>
                         <span class="space"> | </span>
-                        <a href="https://chatter.joshwestbury.com/">View on Github</a>
+                        <a href="https://github.com/joshwestbury/chatter-app">View on Github</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -194,7 +194,7 @@
                         <p>
                             Built with Express, Node.js, JavaScript, PostgreSQL, MongoDB, and OAuth2.0
                         </p>
-                        <a href="https://chatter.joshwestbury.com/">View on Github</a>
+                        <a href="https://github.com/joshwestbury/LitOcean/">View on Github</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
