fixed broken link

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <p>
                             Built with Flask, Python, JavaScript, jQuery, PostgreSQL, PostGiS, SQLAlchemy, and Google Maps API
                         </p>
-                        <a href="https://chatter.joshwestbury.com/">View Live Site</a>
+                        <a href="https://safetravels.joshwestbury.com/">View Live Site</a>
                         <span class="space"> | </span>
                         <a href="https://github.com/joshwestbury/SafeTravels">View on Github</a>
                     </div>
