changed css3 to css

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <h2 class="heading">Front End</h2>
                                 <ul>
                                     <li>HTML5</li>
-                                    <li>CSS3</li>
+                                    <li>CSS</li>
                                     <li>JavaScript</li>
                                     <li>React</li>
                                     <li>Less</li>
