added new resume and fixed a typo

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <div class="project-info" id="safe">
                         <h3>SafeTravels</h3>
                         <p>
-                            A map application that visualizes recent Houston crime data in conjunction with bus routes and bike paths to help ensure you get to where you're going safly.
+                            A map application that visualizes recent Houston crime data in conjunction with bus routes and bike paths to help ensure you get to where you're going safely.
                         </p>
                         <p>
                             Built with Flask, Python, JavaScript, jQuery, PostgreSQL, PostGiS, SQLAlchemy, and Google Maps API
