update about section

--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
                         For the past six years I collaborated with developers, designers, and data scientists as a scholar-in-residence at a software company that specializes in academic software. Although I love the rigor of research and the critical thinking of academic work, I was ready for a new challenge.  So, I exchanged the ivory tower for zeros and ones, and I haven't looked back. I'm passionate about providing eloquent solutions to complex problems, and writing software that improves the way we live and experience the world.
                     </p><br>
                     <p>
-                        I'm proficient in Python, JavaScript, CSS, and HTML5, among others. I love drinking coffee and learning new things. I believe that collaboration is critical for quality software.
-                    </p>
+                        I work with, JavaScript, Node.js, TypeScript, Python, NetSuite (SuiteScript 2.0), SQL, HTML, CSS, along with a variety of frameworks, including ReactJS, Bootstrap, jQuery, Express, Flask, and Tornado.                    </p>
                 </div>
             </div>
         </div>
