update gulpfile.js and page content

--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
                 <a href="#education">Education</a>
             </li>
             <li>
-                <a href="#projects">Projects</a>
-            </li>
-            <li>
                 <a href="#skills">Skills</a>
             </li>
             <li>
@@ -78,13 +75,27 @@
                 </div>
                 <div class="col-md-8">
                     <p id="hi"><br>
-                        <strong>Hi I'm Josh</strong>. I'm a former academic turned software engineer.
+                        <strong>Hi I'm Josh</strong>. I'm a former academic turned Full Stack Developer.
                     </p><br>
                     <p>
-                        For the past six years I collaborated with developers, designers, and data scientists as a scholar-in-residence at a software company that specializes in academic software. Although I love the rigor of research and the critical thinking of academic work, I was ready for a new challenge.  So, I exchanged the ivory tower for zeros and ones, and I haven't looked back. I'm passionate about providing eloquent solutions to complex problems, and writing software that improves the way we live and experience the world.
+                        I hold a PhD in Linguistics and Ancient Languages and have over six years of experience as a Scholar-In-Residence at a mid-sized software company. Although I love the rigor of research and the critical thinking of academic work, I was ready for a new challenge.  So, I exchanged the ivory tower for zeros and ones, and I haven't looked back. I'm passionate about providing eloquent solutions to complex problems, and writing software that improves the way we live and experience the world.
                     </p><br>
                     <p>
-                        I work with, JavaScript, Node.js, TypeScript, Python, NetSuite (SuiteScript 2.0), SQL, HTML, CSS, along with a variety of frameworks, including ReactJS, Bootstrap, jQuery, Express, Flask, and Tornado.                    </p>
+                        I currently work as a software developer at <a href="https://constituentvoice.com/"><b>Constituent Voice</b></a> / <a href="https://www.nwyc.com/frontpage"><b>NWYC</b></a> in Dallas, Texas.
+                    </p><br>
+                    <div class="social-top">
+                        <ul>
+                            <li>
+                                <a href="https://github.com/joshwestbury"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://www.linkedin.com/in/joshwestbury/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/jrwestbury" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -97,12 +108,23 @@
             <div class="row">
                     <div class="col-md-6">
                         <div>
-                            <h2 class="heading">Front End</h2>
+                            <h2 class="heading">Proficient In:</h2>
                                 <ul>
                                     <li>HTML5</li>
                                     <li>CSS</li>
                                     <li>JavaScript</li>
-                                    <li>React</li>
+                                    <li>Node.js</li>
+                                    <li>ReactJS</li>
+                                    <li>TypeScript</li>
+                                    <li>SQL (PostgreSQL, SQLite)</li>
+                                    <li>Git</li>
+                                    <li>Express</li>
+                                    <li>NetSuite (SuiteScript 2.0)</li>
+                                    <li>RESTful web services</li>
+                                    <li>Firebase</li>
+                                    <li>Google Cloud Functions</li>
+                                    <li>Redis</li>
+                                    <li>AWS Lambda Functions</li>
                                     <li>Less</li>
                                     <li>Sass</li>
                                     <li>jQuery</li>
@@ -111,19 +133,18 @@
                     </div>
                     <div class="col-md-6">
                         <div id="learning">
-                            <h2 class="heading">Back End</h2>
+                            <h2 class="heading">Familiarity Wtih:</h2>
                                 <ul>
-                                    <li>Node.js</li>
                                     <li>Python</li>
-                                    <li>SQL</li>
-                                    <li>PostgreSQL</li>
-                                    <li>Express</li>
                                     <li>Flask</li>
                                     <li>Tornado</li>
+                                    <li>Angular (v4.0+)</li>
                                     <li>WebSocket</li>
-                                    <li>AWS</li>
+                                    <li>MongoDB</li>
+                                    <li>WebSocket</li>
                                     <li>Dokku</li>
                                     <li>Heroku</li>
+                                    <li>AWS</li>
                                 </ul>
                         </div>
                     </div>
@@ -133,75 +154,7 @@
     </div>
         <!-- End #skills -->
 
-
-    <div id="projects" class="background-alt">
-        <h2 class="heading">Featured Projects</h2>
-        <div class="container">
-            <div class="row">
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/safetravels.png" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info" id="safe">
-                        <h3>SafeTravels</h3>
-                        <p>
-                            A map application that visualizes recent Houston crime data in conjunction with bus routes and bike paths to help ensure you get to where you're going safely.
-                        </p>
-                        <p>
-                            Built with Flask, Python, JavaScript, jQuery, PostgreSQL, PostGiS, SQLAlchemy, and Google Maps API
-                        </p>
-                        <a href="https://safetravels.joshwestbury.com/">View Live Site</a>
-                        <span class="space"> | </span>
-                        <a href="https://github.com/joshwestbury/SafeTravels">View on Github</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
-
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/chatter.png" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info" id="chat">
-                        <h3>Chatter</h3>
-                        <p>
-                            A chat application that allows users to message one another in real time
-                        </p>
-                        <p>
-                            Built with Express, Node.js, JavaScript, and WebSocket
-                        </p>
-                        <a href="https://chatter.joshwestbury.com/">View Live Site</a>
-                        <span class="space"> | </span>
-                        <a href="https://github.com/joshwestbury/chatter-app">View on Github</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
-
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/LitOcean.png" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info" id="lit">
-                        <h3>Lit Ocean</h3>
-                        <p>
-                            A personal library application that allows users to store and retrieve book information
-                        </p>
-                        <p>
-                            Built with Express, Node.js, JavaScript, PostgreSQL, MongoDB, and OAuth2.0
-                        </p>
-                        <a href="https://github.com/joshwestbury/LitOcean/">View on Github</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
-            </div>
-        </div>
-    </div>
-<!-- End #projects -->
+        <!-- End #projects -->
 
 
     <div id="experience" class="background-alt">
@@ -231,6 +184,33 @@
                 </p><br>
                 <p>
                     Worked cross-departmentally with developers, marketing, sales, publications, and design to optimize product awareness and increase sales by writing blogs posts, web copy, and scripting screencasts and product videos
+                </p>
+            </div>
+            <div data-date="December 2017 – Present">
+                <h3> Constituent Voice | NWYC</h3>
+                <h4>Software Developer</h4>
+                <p>
+                    Refactored business critical SuiteScript 1.0 scripts into type-safe, TypeScript transpiled SuiteScript 2.0 scripts.
+                <p><br>
+                    Built a custom NetSuite page (Suitelet) for uploading large CSV files, as well as ETL Map/Reduce functionality to extract and integrate these files, creating thousands of Lead records within NetSuite on a daily basis.
+                </p><br>
+                <p>
+                    Built an internal web app using ReactJS which accessed three separate APIs in order to extract customer information recorded in a third-party app and associate that information with the customer record stored in NetSuite.
+                </p><br>
+                <p>
+                    Wrote Node.js scripts for standardizing, cleaning, consolidating and filtering large data sets.               
+                </p><br>
+                <p>
+                    Wrote a TypeScript program to extract over three million addresses from NetSuite, acquire the geocodes for those addresses using the Google Map API, format the geocodes, and import them back into NetSuite and Firebase.
+                </p><br>
+                <p>
+                    Contributed to the custom integration of an iOS and Android app with NetSuite using a TypeScript transpiled SuiteScript 2.0 collection of RESTlets and Map/Reduce scripts.
+                </p><br>
+                <p>
+                    Wrote and implemented Firebase cloud functions that listen for a change or creation of an address, or geocodes, and then fetches and updates the Firebase document with the new geocodes or the new address (reverse-geocode), respectively.
+                </p><br>
+                <p>
+                    Wrote and maintained various client/server scripts for both built-in and custom records within NetSuite.
                 </p>
             </div>
         </div>
@@ -272,7 +252,7 @@
     </div>
     <!-- End #education -->
 
-    <div id="skills">
+    <div id="experience">
         <h2 class="heading">Git Hub</h2>
         <div class="container">
             <div class="row">
