add let's connect

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
                     <p>
                         I currently work as a software developer at <a href="https://constituentvoice.com/"><b>Constituent Voice</b></a> / <a href="https://www.nwyc.com/frontpage"><b>NWYC</b></a> in Dallas, Texas.
                     </p><br>
+                    <p>
+                       <a href="#contact">Let's Connect</a> 
+                    </p>
                     <div class="social-top">
                         <ul>
                             <li>
