--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         I hold a PhD in Linguistics and Ancient Languages and have over six years of experience as a Scholar-In-Residence at a mid-sized software company. Although I love the rigor of research and the critical thinking of academic work, I was ready for a new challenge.  So, I exchanged the ivory tower for zeros and ones, and I haven't looked back. I'm passionate about providing eloquent solutions to complex problems, and writing software that improves the way we live and experience the world.
                     </p><br>
                     <p>
-                        I currently work as a software developer at <a href="https://constituentvoice.com/"><b>Constituent Voice</b></a> / <a href="https://www.nwyc.com/frontpage"><b>NWYC</b></a> in Dallas, Texas.
+                        I'm currently the lead NetSuite developer and software engineer at <a href="https://constituentvoice.com/"><b>Constituent Voice</b></a> / <a href="https://www.nwyc.com/frontpage"><b>NWYC</b></a> in Dallas, Texas.
                     </p><br>
                     <p>
                        <a href="#contact">Let's Connect</a> 
