updated About Me

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                 </div>
                 <div class="col-md-8">
                     <p id="hi"><br>
-                        <strong>Hi I'm Josh</strong>. I'm a former academic turned Full Stack Developer.
+                        <strong>Hi I'm Josh</strong>. I'm a former academic turned NetSuite Developer and Integrations Architect.
                     </p><br>
                     <p>
-                        I hold a PhD in Linguistics and Ancient Languages and have over six years of experience as a Scholar-In-Residence at a mid-sized software company. Although I love the rigor of research and the critical thinking of academic work, I was ready for a new challenge.  So, I exchanged the ivory tower for zeros and ones, and I haven't looked back. I'm passionate about providing eloquent solutions to complex problems, and writing software that improves the way we live and experience the world.
+                        I'm passionate about providing eloquent solutions to complex problems. In addition to creating NetSuite customizations through SuiteScript and Workflows, I architect and build resilient and scalable integrations between NetSuite, Salesforce, and other systems using tools such as Boomi and Workato.
                     </p><br>
                     <p>
-                        I'm currently the lead NetSuite developer and software engineer at <a href="https://constituentvoice.com/"><b>Constituent Voice</b></a> / <a href="https://www.nwyc.com/frontpage"><b>NWYC</b></a> in Dallas, Texas.
+                        I'm currently a Sr. Technical Consultant at <a href="https://www.saascg.com"><b>SaaS Consulting Group</b></a>, and I'm located in the Dallas Area.
                     </p><br>
                     <p>
                        <a href="#contact">Let's Connect</a> 
