--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                         <div>
                             <h2 class="heading">Proficient In:</h2>
                                 <ul>
-                                    <li>HTML5</li>
-                                    <li>CSS</li>
+                                    <li>Boomi</li>
+                                    <li>Workato</li>
                                     <li>JavaScript</li>
                                     <li>Node.js</li>
                                     <li>ReactJS</li>
@@ -122,15 +122,17 @@
                                     <li>SQL (PostgreSQL, SQLite)</li>
                                     <li>Git</li>
                                     <li>Express</li>
-                                    <li>NetSuite (SuiteScript 2.0)</li>
+                                    <li>NetSuite (SuiteScript 1.0 and 2.0, SuiteBuilder, SuiteFlow, and SuiteClod)</li>
+                                    <li>SQL</li>
+                                    <li>HTML5</li>
+                                    <li>CSS</li>
                                     <li>RESTful web services</li>
-                                    <li>Firebase</li>
+                                    <li>Cloud Firestore</li>
                                     <li>Google Cloud Functions</li>
                                     <li>Redis</li>
-                                    <li>AWS Lambda Functions</li>
-                                    <li>Less</li>
-                                    <li>Sass</li>
-                                    <li>jQuery</li>
+                                    <li>AWS Services (Lambda, EC2, RDS, S3)</li>
+                                    <li>OAuth 2.0</li>
+                                    <li>JWT</li>
                                 </ul>
                         </div>
                     </div>
@@ -138,6 +140,7 @@
                         <div id="learning">
                             <h2 class="heading">Familiarity Wtih:</h2>
                                 <ul>
+                                    <li>Salesforce (Admin Customizations and Configuration, SOQL)</li> 
                                     <li>Python</li>
                                     <li>Flask</li>
                                     <li>Tornado</li>
@@ -147,7 +150,7 @@
                                     <li>WebSocket</li>
                                     <li>Dokku</li>
                                     <li>Heroku</li>
-                                    <li>AWS</li>
+                                    <li>Kubernetes</li>
                                 </ul>
                         </div>
                     </div>
